# main-knowledge-base

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  PKM-BRANCH-TRACKING.md  README.md  TODO.md  academic-research-platform-system-design.md  arxiv-mcp-enhanced-design.md  arxiv-mcp-enhancement-completion-report.md  directory-analysis-2025-09-11.md  main.py  pyproject.toml  report-comprehensive-workspace-organization-completion-20250915.md  systematic-task-execution-completion-report.md  vscode-toolset-testing-report.md  vscode-toolset-usage-guide.md  workspace-analysis-2025-09-11.md  workspace-reorganization-plan.md
.github/: copilot-instructions.md
.kb/: requirements.txt
00-admin/: README.md  maintenance-report-20250911-181720.md  maintenance-report-20250911-182732.md  maintenance-report-20250914-164153.md  maintenance-report-20250914-164526.md  maintenance-report-20250914-164605.md  migration-maintenance-guide.md  phase-completion-summary.md  user-guide.md
10-knowledge/: README.md
20-projects/: README.md
40-code/: enhance_organization.py  maintain_kb_enhanced.py  maintain_organization.py  migration-decision-maintain-organization.md
50-experiments/: bash-functions-performance-analysis.ipynb
80-resources/: README.md  comprehensive-tools-reference.md  computer-science-fundamentals.md  mcp-servers-guide.md  vscode-copilot-complete-guide.md  vscode-copilot-customization-complete.md  vscode-copilot-customization.md
archives/: README_old.md
current-work/: arxiv-mcp-enhanced-design.md  vscode-toolset-testing-report.md
database/: analytics.db  citations.db  knowledge.db  setup_databases.py
docs/: README.md
infrastructure/: README.md
knowledge/: README.md
(+227 files in other folders)
